# Flower-Tutorials

./: .gitignore  Flower_01.ipynb  Flower_02.ipynb  Flower_03.ipynb  README.md  Tutorial_01.ipynb  global_model_round_1.pth  global_model_round_2.pth  global_model_round_3.pth  global_model_round_4.pth  global_model_round_5.pth  results.json
my-first-app/: README.md  global_model_round_1.pth  global_model_round_2.pth  global_model_round_3.pth  global_model_round_4.pth  global_model_round_5.pth  pyproject.toml  results.json
my-first-app/my_first_app/: My_strategy.py  __init__.py  client_app.py  server_app.py  task.py
my-first-app/wandb/: latest-run
my-first-app/wandb/run-20250815_234731-sr8gs2bj/: run-sr8gs2bj.wandb
my-first-app/wandb/run-20250815_234731-sr8gs2bj/files/: config.yaml  wandb-metadata.json
my-first-app/wandb/run-20250815_235351-a1ndrnwf/: run-a1ndrnwf.wandb
my-first-app/wandb/run-20250815_235351-a1ndrnwf/files/: config.yaml  wandb-metadata.json  wandb-summary.json
my-first-app/wandb/run-20250816_000037-8cwbk0db/: run-8cwbk0db.wandb
my-first-app/wandb/run-20250816_000037-8cwbk0db/files/: config.yaml  wandb-metadata.json  wandb-summary.json
my-first-app/wandb/run-20250820_203348-6xnjfjxu/: run-6xnjfjxu.wandb
my-first-app/wandb/run-20250820_203348-6xnjfjxu/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
up-fall-app/: README.md  pyproject.toml
up-fall-app/up_fall_app/: __init__.py  client_app.py  client_selection.py  load_data.py  res_model.py  server_app.py  task.py  utils.py
wandb/: latest-run
wandb/run-20250816_113707-sj9drymp/: run-sj9drymp.wandb
wandb/run-20250816_113831-gh4suv86/: run-gh4suv86.wandb
wandb/run-20250816_115446-mk1l2cha/: run-mk1l2cha.wandb
wandb/run-20250816_115738-s2uabm25/: run-s2uabm25.wandb
(+105 files in other folders)
